Fix Qarik logo positioning on mobile devices

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -176,12 +176,12 @@ main {
 	padding:1rem;
 }
 
+.logo-wrapper {
+  text-align: center;
+}
 
 .logo {
   max-height: 5rem;
-  float: right;
-  padding-bottom: 0.5rem;
-  padding-right: 1.5rem;
 }
 
 @media screen and (max-width: 45rem ) {
